CSS changes for deployment

--- a/sorting_visualizer.html
+++ b/sorting_visualizer.html
@@ -5,35 +5,53 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sorting Visualizer</title>
+    <script
+      src="https://kit.fontawesome.com/1f592f01af.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="sorting_visualizer.css" />
   </head>
   <body>
     <div class="top-container">
-      <span id="arrSize"
-        >Array Size
-        <input
-          id="array_size"
-          type="range"
-          min="20"
-          max="80"
-          step="1"
-          value="60"
-        />
-      </span>
-      <h1>Sorting Visualizer <span>By: Sergio Quijano</span></h1>
-      <span id="speed">
-        Speed
-        <input
-          id="speed_value"
-          type="range"
-          min="1"
-          max="100"
-          step="1"
-          value="60"
-        />
-      </span>
+      <div class="top-left">
+        <span id="arrSize"
+          >Array Size
+          <input
+            id="array_size"
+            type="range"
+            min="20"
+            max="60"
+            step="1"
+            value="70"
+          />
+        </span>
+      </div>
+      <div class="top-middle">
+        <h1>
+          Sorting Visualizer <br />
+          <div>By: Sergio Quijano</div>
+        </h1>
+      </div>
+      <div class="top-right">
+        <span id="speed">
+          Speed
+          <input
+            id="speed_value"
+            type="range"
+            min="1"
+            max="100"
+            step="1"
+            value="60"
+          />
+        </span>
+      </div>
     </div>
-    <div class="sorting-container"></div>
+    <div class="middle-container">
+      <div class="sorting-container"></div>
+      <button id="reload-page">
+        <i class="fa-solid fa-arrow-rotate-right"></i>Reload
+      </button>
+    </div>
     <div class="button-container">
       <button id="newArray">Generate new Array</button>
       <button id="selectionSort">Selection Sort</button>
